--- a/ReconTime/ReconTime/MainWindow.xaml
+++ b/ReconTime/ReconTime/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ReconTime.MainWindow"
+﻿<Window x:Name="scanWindow" x:Class="ReconTime.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,21 @@
         xmlns:local="clr-namespace:ReconTime"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="320" Margin="10,0,0,0" VerticalAlignment="Top" Width="505">
+        <TabItem x:Name="tabScan" Header="Scan Barcode">
+            <Grid x:Name="gridScan" Background="#FFFFFF">
+                <Button x:Name="buttonOk" Content="OK" HorizontalAlignment="Left" Margin="60,112,0,0" VerticalAlignment="Top" Width="75"/>
+                <Button x:Name="buttonCancel" Content="Cancel" HorizontalAlignment="Left" Margin="200,112,0,0" VerticalAlignment="Top" Width="75" IsCancel="True"/>
+                <TextBox x:Name="inputBarcode" HorizontalAlignment="Left" Height="38" Margin="60,43,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="215" RenderTransformOrigin="0.167,0.602" AutomationProperties.HelpText="Enter Barcode Here"/>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="tabManagement" Header="Management" Margin="-2,-2,-2,0" Height="22" VerticalAlignment="Top">
+            <Grid x:Name="gridManagement" Background="#FFFFFF">
+                <Label x:Name="label" Content="Username&#xD;&#xA;" HorizontalAlignment="Left" Margin="60,60,0,0" VerticalAlignment="Top" Height="23"/>
+                <Label x:Name="label_Copy" Content="Password&#xA;" HorizontalAlignment="Left" Margin="60,102,0,0" VerticalAlignment="Top" Height="23"/>
+                <TextBox x:Name="inputUsername" HorizontalAlignment="Left" Height="23" Margin="145,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <PasswordBox x:Name="inputPassword" HorizontalAlignment="Left" Margin="145,107,0,0" VerticalAlignment="Top" Width="120"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
