--- a/ReconTime/ReconTime/MainWindow.xaml
+++ b/ReconTime/ReconTime/MainWindow.xaml
@@ -14,6 +14,18 @@
                 <TextBox x:Name="inputBarcode" HorizontalAlignment="Left" Height="38" Margin="60,43,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="215" RenderTransformOrigin="0.167,0.602" AutomationProperties.HelpText="Enter Barcode Here"/>
             </Grid>
         </TabItem>
+        <TabItem x:Name="tabManualInput" Header="Manuell" Margin="-2,-2,-2,0" Height="22" VerticalAlignment="Top">
+            <Grid x:Name="gridManual" Background="#FFFFFF">
+                <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="60,55,0,0" VerticalAlignment="Top" Width="184">
+                    <ComboBoxItem>David </ComboBoxItem>
+                        <ComboBoxItem>Nils</ComboBoxItem>
+                        <ComboBoxItem>Päde</ComboBoxItem>
+                    <ComboBoxItem>Tobi</ComboBoxItem>
+                </ComboBox>
+                <Button x:Name="buttonIn" Content="In" HorizontalAlignment="Left" Margin="60,120,0,0" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.167,-0.329"/>
+                <Button x:Name="buttonOut" Content="Out" HorizontalAlignment="Left" Margin="170,120,0,0" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.167,-0.329"/>
+            </Grid>
+        </TabItem>
         <TabItem x:Name="tabManagement" Header="Management" Margin="-2,-2,-2,0" Height="22" VerticalAlignment="Top">
             <Grid x:Name="gridManagement" Background="#FFFFFF">
                 <Label x:Name="label" Content="Username&#xD;&#xA;" HorizontalAlignment="Left" Margin="60,60,0,0" VerticalAlignment="Top" Height="23"/>
@@ -22,5 +34,6 @@
                 <PasswordBox x:Name="inputPassword" HorizontalAlignment="Left" Margin="145,107,0,0" VerticalAlignment="Top" Width="120"/>
             </Grid>
         </TabItem>
+
     </TabControl>
 </Window>
