--- a/ReconTime/ReconTime/MainWindow.xaml
+++ b/ReconTime/ReconTime/MainWindow.xaml
@@ -41,6 +41,7 @@
                 <Label x:Name="label_Copy" Content="Password&#xA;" HorizontalAlignment="Left" Margin="60,102,0,0" VerticalAlignment="Top" Height="23"/>
                 <TextBox x:Name="inputUsername" HorizontalAlignment="Left" Height="23" Margin="145,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                 <PasswordBox x:Name="inputPassword" HorizontalAlignment="Left" Margin="145,107,0,0" VerticalAlignment="Top" Width="120"/>
+                <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="107,199,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
             </Grid>
         </TabItem>
 
